[gd_scene load_steps=5 format=3 uid="uid://do2n8mspte2if"]

[ext_resource type="Script" uid="uid://vkkiu7bpptdw" path="res://scenes/obstacle/obstacle.gd" id="1_phb0t"]
[ext_resource type="Texture2D" uid="uid://cqejf74ebsjqx" path="res://Assets/Sprites/rockSnowDown.png" id="1_utmkd"]
[ext_resource type="Texture2D" uid="uid://dtfi2ha7ihubr" path="res://Assets/Sprites/rockSnow.png" id="2_qlgnj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_osovj"]
size = Vector2(20, 135)

[node name="Obstacle" type="Node2D"]
scale = Vector2(2, 2)
script = ExtResource("1_phb0t")

[node name="Top" type="Area2D" parent="."]
position = Vector2(0, -163)

[node name="Sprite2D" type="Sprite2D" parent="Top"]
texture = ExtResource("1_utmkd")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Top"]
polygon = PackedVector2Array(-52, -117, 53, -117, 17, 118, 8, 119, -18, -5, -25, -11)

[node name="Bottom" type="Area2D" parent="."]
position = Vector2(0.5, 159)

[node name="Sprite2D" type="Sprite2D" parent="Bottom"]
texture = ExtResource("2_qlgnj")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Bottom"]
polygon = PackedVector2Array(-53, 117, -25, 11, -17, 5, 9, -118, 15, -118, 27, -17, 32, -17, 40, 54, 46, 59, 54, 118)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(80, 1.5)
rect = Rect2(-10, -40, 20, 80)

[node name="Score" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Score"]
position = Vector2(53.5, 5)
shape = SubResource("RectangleShape2D_osovj")

[connection signal="body_entered" from="Top" to="." method="_on_top_body_entered"]
[connection signal="body_entered" from="Bottom" to="." method="_on_bottom_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="body_entered" from="Score" to="." method="_on_score_body_entered"]
